GNOME Bugzilla – Bug 740423
Wrong author shown for Google albums
Last modified: 2014-12-15 17:46:33 UTC
Created attachment 291086 [details] screenshot Thanks to the Google online account integration, albums from my Google photos now show up in Photos (awesome). Unfortunately, the wrong author seems to be displayed for all of them. Curiously, Photos displays my partner's user name as the author, even though the photos in each album are correctly attributed to me.
Created attachment 292391 [details] [review] gdata: Set the correct nco:creator for PicasaWeb albums
Created attachment 292392 [details] [review] gdata: Differentiate between different creators of PicasaWeb files
Created attachment 292393 [details] [review] gdata: Force full reindex
To test, apply patches, and then run the miner as: $ GDATA_MINER_PERSIST=1 $prefix/libexec/gom-gdata-miner The run gnome-documents and gnome-photos and check.
Created attachment 292761 [details] [review] gdata: Set the correct nco:creator for PicasaWeb